Import of ISHIGAKI/Path-Extended-0.05 from CPAN.
gitpan-cpan-distribution: Path-Extended
gitpan-cpan-version:      0.05
gitpan-cpan-path:         ISHIGAKI/Path-Extended-0.05.tar.gz
gitpan-cpan-author:       ISHIGAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Path-Extended
 
+0.05 2009/03/04
+  - removed trash
+
 0.04 2009/03/04
   - logging part is replaced with a Log::Dump module.
   - some pod fixes
