--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Path-Extended
 
+0.08 2009/03/05
+  - fixed relative/absolute path issue
+
 0.07 2009/03/05
   - reorganized some methods and added compatible "recurse"
     and incompatible "new_foreign" methods.
