Import of ISHIGAKI/Path-Extended-0.09 from CPAN.
gitpan-cpan-distribution: Path-Extended
gitpan-cpan-version:      0.09
gitpan-cpan-path:         ISHIGAKI/Path-Extended-0.09.tar.gz
gitpan-cpan-author:       ISHIGAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Path-Extended
 
+0.09 2009/03/06
+  - "mtime" option of "save" didn't work well.
+
 0.08 2009/03/05
   - fixed relative/absolute path issue
 
