--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Path-Extended
 
+0.10 2009/03/08
+  - fixed a compatibility test which may break under some environment
+  - better pod coverage
+  - reorganized a bit and added "basename" to dir (cf. RT #17312)
+  - better subclassing
+  - forgot to close a directory after ->children, and before ->rmdir
+
 0.09 2009/03/06
   - "mtime" option of "save" didn't work well.
 
