--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Path-Extended
 
+0.16 2009/12/19
+  - added a shortcut in the slurp method; no need to loop while
+    slurping without any callbacks/filters
+  - fixed pod nits spotted by FWIE
+  - added is_(read|writ)able methods
+
 0.15 2009/10/07
   - $_ was not properly set while slurping/saving with multiple
     callbacks
