Import of ISHIGAKI/Path-Extended-0.21 from CPAN.
gitpan-cpan-distribution: Path-Extended
gitpan-cpan-version:      0.21
gitpan-cpan-path:         ISHIGAKI/Path-Extended-0.21.tar.gz
gitpan-cpan-author:       ISHIGAKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Path-Extended
 
+0.21 2012/11/19
+  - made error logs more verbose
+
 0.20 2012/06/22
   - ::Dir->is_absolute correctly returns if the path you passed to
     the constructor is absolute or not (fixed by Wolfgang Pecho;
