--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Path-Extended
 
+0.22 2014/08/16
+  - no code changes
+  - dropped Test::Classy dependency
+  - cpanfile
+
 0.21 2012/11/19
   - made error logs more verbose
 
